fix: footer section wrap wrap in section

--- a/titangene/css/styles.css
+++ b/titangene/css/styles.css
@@ -221,7 +221,7 @@ footer .container {
   padding: 80px 0;
   font-size: 0;
 }
-.section-wrap {
+footer .section-wrap {
   margin-bottom: 80px;
 }
 footer .section {
